--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -1,4 +1,21 @@
-<h3>Home</h3>
-<p>Welcome to the home of <%= @owner.name %>.</p>
-<p>I was born on <%= @owner.birthdate %>.</p>
-<p>Only <%= @owner.countdown %> days until my birthday!</p>
+<% content_for :title do %>Dan Reardon<% end %>
+<% content_for :description do %>Website of Dan Reardon<% end %>
+<section>
+	<!--img src="http://lorempixel.com/1170/600/nightlife/1/"-->
+	<%= image_tag "grand_canyon.jpg"  %>
+</section>
+<section>
+	<div class="column">
+		<h2>Stay in touch.</h2>
+	</div>
+	<div class="column">
+		<div class="form-centered">
+			<%= simple_form_for @visitor do |f| %>
+				<%= f.error_notification %>
+				<%= f.input :email, label: false, :placeholder => 'Your email address...' %>
+				<br/>
+				<%= f.button :submit, "Sign up for the newsletter", :class => "submit" %>
+			<% end %>
+		</div>
+	</div>
+</section>
